corrected spacing in the aside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ a {
 
 p {
     font-size: 16px;
+    color: #ffffff;
 }
 
 /* hero style */
@@ -120,6 +121,7 @@ aside div {
 aside h3 {
     margin-bottom: 32px;
     color: #ffffff;
+    text-align: center;
 }
 
 aside img {
